--- a/colombia_limtip.qmd
+++ b/colombia_limtip.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Time Poverty Feminization and Gender Discrimination in a Developing Country'"
-subtitle: "A Review"
+subtitle: "Comments and Suggestions"
 author: Fernando Rios-Avila
 format: 
   revealjs:
@@ -13,88 +13,58 @@ format:
 
 ## Introduction
 
-This paper examines time poverty in Colombia using the National Time Use Survey data. While it addresses an important topic, there are several methodological issues and areas for improvement.
+- This paper examines time poverty in Colombia using the National Time Use Survey data, aiming to identify factors that explain the gap between men and women.
 
-::: {.notes}
-The topic is relevant, but the execution needs refinement.
-:::
+- They use the LIMTIP method for the identification of time poverty, and an extension of the Oaxaca-Blinder decomposition to analyze the gender gap.
+ 
+- While it addresses an important topic, (gender gap at home), for the case of Colombia, there are some aspects of the methodology and implementation that need attention. 
 
-## Sample and Estimation Issues
+## LIMTIP Construction
 
-- Unclear if full sample or only working-age adults are used
-- Lack of details on estimation procedure (weights, clustering, standard errors)
-- High statistical significance suggests potential misuse of survey weights
+- Details behind the estimation of LIMTIP are not provided.
+  - The basics are there, but there are many smaller details that not fully explained
+    - How are thresholds defined? $R_j$ or shares $a_{ij}$?
+    - Are you using full sample or working age population?
+    - Is the data on time-use part of main Survey or was any imputation done?
+    - Is time poverty measured at the individual or household level?
+  - Something that call our attention. For time spend at work, are you using a 52-week year assumption? We find that this overstates the time deficit
 
-::: {.notes}
-These issues could significantly bias the results. The authors should clarify their methodology and ensure proper use of survey data techniques.
-:::
+## Inference and Estimation
+
+It may be necessariy to check the estimation procedure.
+
+- Are you using Full Sample or Working Age Population for analysis?
+  - Summary statistics suggest the former. But then LIMTIP for children and elderly may not make sense.
+  - This may also be explaining the small gender gap that is reported. (2.3% of time poverty gap seems too small)
+- I'm also concerned with the proper use of sampling weights. The High statistical significance suggests potential misuse. [fw vs pw]
+- What is "extreme time poverty" in the context of LIMTIP? 
 
 ## Interpretation of Results
 
-- Oaxaca-Blinder decomposition misinterpreted as identifying discrimination
-- Incorrect interpretation of positive coefficients in decomposition
-- Policy implications not well-tied to empirical results
+- Word of Caution: **Oaxaca-Blinder** decomposition should not be interpreted as discrimination.
+  - It is an Accouting excercise, not a causal effect. Other factors could be related to discrimination.
+- Caution: Squared terms in decompositions are difficult to interpret.
+  - First, Marginal effects are incorrectily calculated.
+  - The "asymptotic" expression for decomposition is unnecessary and incorrect. (Eq 9)
+  - In decompositions, Squared terms cannot be interpreted as separate effects.
+    - And they cannot be interpreted directly in non-linear models.
 
-::: {.notes}
-The authors need to be more cautious in their interpretations, avoiding causal language about discrimination and ensuring policy recommendations are directly supported by their findings.
-:::
+## Suggestions for Improvement
 
-## Methodological Issues
+1. It may benefit to provide **more** context with other Latin American countries.
+2. Provide few more details on the construction of LIMTIP, some of the decisions may affect the results.
+3. Clearly define the target population for the LIMTIP estimation, and analysis.
+4. Consider using # of weeks worked instead of 52-week assumption. (if information is available)
+5. Technical: Use centered squared terms in decomposition for easier interpretation
 
-- Problematic use of squared terms in decomposition
-- Incorrect calculation of marginal effects for squared terms
-- Unnecessary and incorrect "asymptotic" expression for decomposition
+## Suggestions for Improvement
 
-::: {.notes}
-These technical issues undermine the reliability of the results. Using centered squared terms and correcting the marginal effects calculation would improve the analysis.
-:::
+6. Given the "small" gap of poverty incidence, may be more useful to also analyze factors related to time deficits.
+7. Some of the summary statistics indicate that Gaps are larger for some groups. This could be explored further. 
+   - Urban vs Rural for example.
+8. Make the contribution of the paper more explicit. 
+   - What is the main takeaway? 
+   - What is the main contribution to the literature?
+9. To consider. Since you have data on couples, may be more relevant to analyze the gap in the household, rather than individual level. (single men vs single women may not be comparable at all)
 
-## Clarity and Context
-
-- Key differences (e.g., 0.023 in abstract) not clearly defined
-- Lack of comparison to time poverty gender gaps in other countries
-- Paper's contribution, especially compared to previous work on Colombia, not explicit
-
-::: {.notes}
-Providing more context and clearly stating the paper's contribution would enhance its value to the field.
-:::
-
-## Data and Measurement
-
-- Likely overestimation of time deficits due to 52-week work year assumption
-- Ambiguity in individual vs. household level time poverty measurement
-- Lack of details on estimation of key parameters (R, a_ij)
-
-::: {.notes}
-Using effective weeks worked and clarifying the level of analysis would improve the accuracy and interpretability of the results.
-:::
-
-## Suggestions for Improvement (1)
-
-1. Clarify sample used and provide full estimation procedure details
-2. Re-estimate results with appropriate weights and clustering
-3. Revise interpretation of decomposition results, avoiding causal language
-4. Use centered squared terms in decomposition for easier interpretation
-
-::: {.notes}
-These changes would significantly improve the methodological rigor of the paper.
-:::
-
-## Suggestions for Improvement (2)
-
-5. Provide more context on results compared to other countries and previous work
-6. Clarify individual vs. household level time poverty measurement
-7. Consider using effective weeks worked instead of 52-week assumption
-8. Examine urban/rural and household type differences in more depth
-
-::: {.notes}
-These suggestions would enhance the paper's contribution to the literature and policy relevance.
-:::
-
-## Conclusion
-
-While addressing an important topic, this paper requires significant revisions to provide robust insights on time poverty and gender in Colombia. More care in the empirical approach and interpretation of results is needed.
-
-::: {.notes}
-The authors have an opportunity to make a valuable contribution with careful revisions and methodological improvements.
-:::
+# Thank you!
