--- a/colombia_limtip.qmd
+++ b/colombia_limtip.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Time Poverty Feminization and Gender Discrimination in a Developing Country'"
+title: "Time Poverty Feminization and Gender Discrimination in a Developing Country"
 subtitle: "Comments and Suggestions"
 author: Fernando Rios-Avila
 format: 
@@ -17,54 +17,54 @@ format:
 
 - They use the LIMTIP method for the identification of time poverty, and an extension of the Oaxaca-Blinder decomposition to analyze the gender gap.
  
-- While it addresses an important topic, (gender gap at home), for the case of Colombia, there are some aspects of the methodology and implementation that need attention. 
+- While it addresses an important topic (gender gap at home) for the case of Colombia, there are some aspects of the methodology and implementation that need attention. 
 
 ## LIMTIP Construction
 
 - Details behind the estimation of LIMTIP are not provided.
-  - The basics are there, but there are many smaller details that not fully explained
+  - The basics are there, but many smaller details are not fully explained
     - How are thresholds defined? $R_j$ or shares $a_{ij}$?
     - Are you using full sample or working age population?
-    - Is the data on time-use part of main Survey or was any imputation done?
+    - Is the data on time-use part of the main Survey or was any imputation done?
     - Is time poverty measured at the individual or household level?
-  - Something that call our attention. For time spend at work, are you using a 52-week year assumption? We find that this overstates the time deficit
+  - Something that calls our attention: For time spent at work, are you using a 52-week year assumption? We find that this overstates the time deficit
 
 ## Inference and Estimation
 
-It may be necessariy to check the estimation procedure.
+It may be necessary to check the estimation procedure.
 
 - Are you using Full Sample or Working Age Population for analysis?
   - Summary statistics suggest the former. But then LIMTIP for children and elderly may not make sense.
   - This may also be explaining the small gender gap that is reported. (2.3% of time poverty gap seems too small)
-- I'm also concerned with the proper use of sampling weights. The High statistical significance suggests potential misuse. [fw vs pw]
+- I'm also concerned with the proper use of sampling weights. The high statistical significance suggests potential misuse. [fw vs pw]
 - What is "extreme time poverty" in the context of LIMTIP? 
 
 ## Interpretation of Results
 
 - Word of Caution: **Oaxaca-Blinder** decomposition should not be interpreted as discrimination.
-  - It is an Accouting excercise, not a causal effect. Other factors could be related to discrimination.
+  - It is an accounting exercise, not a causal effect. Other factors could be related to discrimination.
 - Caution: Squared terms in decompositions are difficult to interpret.
-  - First, Marginal effects are incorrectily calculated.
+  - First, marginal effects are incorrectly calculated.
   - The "asymptotic" expression for decomposition is unnecessary and incorrect. (Eq 9)
-  - In decompositions, Squared terms cannot be interpreted as separate effects.
+  - In decompositions, squared terms cannot be interpreted as separate effects.
     - And they cannot be interpreted directly in non-linear models.
 
 ## Suggestions for Improvement
 
 1. It may benefit to provide **more** context with other Latin American countries.
-2. Provide few more details on the construction of LIMTIP, some of the decisions may affect the results.
-3. Clearly define the target population for the LIMTIP estimation, and analysis.
+2. Provide a few more details on the construction of LIMTIP, some of the decisions may affect the results.
+3. Clearly define the target population for the LIMTIP estimation and analysis.
 4. Consider using # of weeks worked instead of 52-week assumption. (if information is available)
 5. Technical: Use centered squared terms in decomposition for easier interpretation
 
 ## Suggestions for Improvement
 
-6. Given the "small" gap of poverty incidence, may be more useful to also analyze factors related to time deficits.
-7. Some of the summary statistics indicate that Gaps are larger for some groups. This could be explored further. 
+6. Given the "small" gap of poverty incidence, it may be more useful to also analyze factors related to time deficits.
+7. Some of the summary statistics indicate that gaps are larger for some groups. This could be explored further. 
    - Urban vs Rural for example.
 8. Make the contribution of the paper more explicit. 
    - What is the main takeaway? 
    - What is the main contribution to the literature?
-9. To consider. Since you have data on couples, may be more relevant to analyze the gap in the household, rather than individual level. (single men vs single women may not be comparable at all)
+9. To consider: Since you have data on couples, it may be more relevant to analyze the gap in the household, rather than at the individual level. (single men vs single women may not be comparable at all)
 
 # Thank you!
